--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="page-title-p">Howdy, welcome to my website! My name is Wiktor, but I use Kwadratz as my name in the internet (means "square" in Polish, which I speak!). 
         I call myself a programming beginner, and I know Python, HTML and CSS well. I also sometimes write code in JS. I'm learning some libraries for Python now, 
         such as PySimpleGUI and PyGame, and I make stuff from it. Privately, I enjoy taking photos, learning geography, rollerskating, playing Minecraft 
-        and of course coding! I live in Wroclaw, Poland, and I'm 1 hours ahead Brits, or even 2 hours during summer. If you wish to contact me, do it 
+        and of course coding! I have a furious cat named Hubert, he's my second cat. I live in Wroclaw, Poland, and I'm 1 hours ahead Brits, or even 2 hours during summer. If you wish to contact me, do it 
         <a href="contact.html">here</a>. Also, you can check my PC specifications <a href="pcspecs.html">here</a>. I also run a 
         <a href="https://www.youtube.com/channel/UCSy-GbQIzfUKppQH9k_CDqg">YouTube channel</a> about my projects.<br></p>
       </div>
