--- a/pcspecs.html
+++ b/pcspecs.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Kwadratz - Contacts</title>
+    <title>Kwadratz - PC Specs</title>
     <meta name="keywords" content="kwadrat projects kwadratz cavestuck" />
     <meta
       name="description"
@@ -32,7 +32,11 @@
       <div class="cnt-container">
         <h1 class="page-title">PC specifications</h1>
           <p class="page-title-p">
-            Processor: AMD Ryzen 3250U with Radeon Graphics (2 cores, 2.6 GHz)
+            Processor: AMD Ryzen 3250U (2 cores, 2.6 GHz, x64, UEFI)<br>
+            Graphics card: Integrated with CPU (AMD Radeon Graphics)<br>
+            RAM: 16 GB<br>
+            Storage: 512 GB<br>
+            OS: Windows 11 Home (planning to switch onto linux)
           </p>
       </div>
       <hr class="short">
