--- a/dls.html
+++ b/dls.html
@@ -32,7 +32,8 @@
       <div class="cnt-container">
         <h1 class="page-title">Downloads</h1>
           <p class="page-title-p">
-            Coming Soon!
+            SzafAppka v1.0 - Download for <u><a href="https://bit.ly/SzafAppka">Android</a></u>
+            SzafAppka v1.1 - Download for <u><a href="https://bit.ly/SzafAppka1">Android</a></u>
           </p>
       </div>
       <hr class="short">
