--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,7 @@
     <main>
       <div class="cnt-container">
         <h1 class="page-title">Projects</h1>
+        <p class="page-title-p">For now, there will be nothing, I'm mainly learning nowadays, but something may arrive here soon...</p>
           <!-- <h2 class="page-title">Example Project</h2>
           <p class="page-title-p">
             Example Description
