--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
       <div class="cnt-container">
         <h1 class="page-title">Welcome!</h1>
         <p class="page-title-p">Howdy, welcome to my website! My name is Wiktor, but I use Kwadratz as my name in the internet (means "square" in Polish, which I speak!). 
-        I call myself a programming beginner, and I know Python, HTML and CSS well. I also sometimes write code in JS. I'm learning some libraries for Python now, 
-        such as PySimpleGUI and PyGame, and I make stuff from it. I'm also starting (again) a C# course! Privately, I enjoy taking photos, learning geography, rollerskating, playing Minecraft 
+        I call myself a programming beginner, and I know Python, HTML and CSS well. I also sometimes write code in JS. I'm learning Java now, as well as PyGame. Privately, I enjoy taking photos, learning geography, rollerskating, playing Minecraft 
         and of course coding! I have a furious cat named Hubert, he's my second cat. I live in Wroclaw, Poland, and I'm 1 hours ahead Brits, or even 2 hours during summer. If you wish to contact me, do it 
         <a href="contact.html">here</a>. Also, you can check my PC specifications <a href="pcspecs.html">here</a>. I also run a 
         <a href="https://www.youtube.com/channel/UCSy-GbQIzfUKppQH9k_CDqg">YouTube channel</a> about my projects.<br></p>
@@ -41,7 +40,7 @@
       <hr>
       <div class="cnt-container">
         <h2 class="page-title">Newest YouTube video</h2>
-        <iframe width="640" height="360" src="https://www.youtube.com/embed/ZJqLbQeQeoA" title="[🔴 Live Archive] Getting 50 LVL on Hypixel!" 
+        <iframe width="640" height="360" src="https://www.youtube.com/embed/ZcgBx9DA7Rc" title="CitiesBuild: A2 + A5: Podziemna Góra Lotnisko - Żelaniny Północ" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <hr class="short">
