--- a/projects.html
+++ b/projects.html
@@ -31,15 +31,33 @@
     <main>
       <div class="cnt-container">
         <h1 class="page-title">Projects</h1>
-        <p class="page-title-p">For now, there will be nothing, I'm mainly learning nowadays, but something may arrive here soon...</p>
-          <!-- <h2 class="page-title">Example Project</h2>
+          <!-- POWERPROMPT -->
+          <h2 class="page-title">PowerPrompt</h2>
           <p class="page-title-p">
-            Example Description
+            <i>Created by Mihael2017</i>
+            An awesome new way to make things done! Introducing: PowerPrompt! Your new source of computer management. Version that is published here won't be the newest.
+            Newest version is shared with a limited group, but we still want to share something with you, so here we are.
+            PowerPrompt includes life-changing features like:
+            <ul>
+              <li>Window management</li>
+              <li>Easy access to all of Windows Administrative Tools, as well as Windows Accessories, Settings app and Control Panel</li>
+              <li>Password Keeper</li>
+              <li>Disc partitioning</li>
+              <li>File organization</li>
+              <li>Command history (1.7 or higher)</li>
+              <li>Character counter (1.7 or higher)</li>
+              <li>To-do list (coming soon)</li>
+              <li>Voice controlling (coming soon)</li>
+              <li>Exporting and importing settings (coming soon)</li>
+            </ul>
+            <i>Project is made in 99% by Mihael2017, I've contributed to this project a few times, and here is the only - at least for now - 
+            public download source. 
+            </i>
+            LINUX AND MAC SUPPORT COMING (not that) SOON!
           </p>
           <p class="page-title-p">
-            <b>Downloads</b> [ <a href="">Windows</a> | <a href="">Mac</a> | <a href="">Linux</a> ]
+            <b>Downloads</b> [ <a href="https://bit.ly/powerprompt169link">Windows</a> ]
           </p>
-          <hr class="medium"> -->
       </div>
       <hr class="short">
       <h6 class="page-title">Copyright Kwadratz 2022. All rights reserved.</h6>
