--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
             LINUX AND MAC SUPPORT COMING (not that) SOON!
           </p>
           <p class="page-title-p">
-            <b>Downloads</b> [ <a href="https://bit.ly/powerprompt169link">Windows</a> ]
+            <b>Downloads</b> [ <a href="https://github.com/Mihael3007/PowerPrompt">Windows</a> ]
           </p>
       </div>
       <hr class="short">
