--- a/dls.html
+++ b/dls.html
@@ -32,8 +32,9 @@
       <div class="cnt-container">
         <h1 class="page-title">Downloads</h1>
           <p class="page-title-p">
-            SzafAppka v1.0 - Download for <u><a href="https://bit.ly/SzafAppka">Android</a></u>
-            SzafAppka v1.1 - Download for <u><a href="https://bit.ly/SzafAppka1">Android</a></u>
+            SzafAppka v1.0 - Download for <u><a href="https://bit.ly/SzafAppka">Android</a></u><br>
+            SzafAppka v1.1 - Download for <u><a href="https://bit.ly/SzafAppka1">Android</a></u><br>
+            PowerPrompt 1.6.9 - Download for <u><a href="https://github.com/Mihael3007/PowerPrompt/releases/tag/v1.6">Windows</a></u><br>
           </p>
       </div>
       <hr class="short">
