New PowerPrompt links

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
           <!-- POWERPROMPT -->
           <h2 class="page-title">PowerPrompt</h2>
           <p class="page-title-p">
-            <i>Created by Mihael2017</i>
+            <i>Created by Mihael2017</i><br>
             An awesome new way to make things done! Introducing: PowerPrompt! Your new source of computer management. Version that is published here won't be the newest.
             Newest version is shared with a limited group, but we still want to share something with you, so here we are.
             PowerPrompt includes life-changing features like:
@@ -44,9 +44,9 @@
               <li>Password Keeper</li>
               <li>Disc partitioning</li>
               <li>File organization</li>
-              <li>Command history (1.7 or higher)</li>
-              <li>Character counter (1.7 or higher)</li>
-              <li>To-do list (coming soon)</li>
+              <li>Command history</li>
+              <li>Character counter</li>
+              <li>To-do list</li>
               <li>Voice controlling (coming soon)</li>
               <li>Exporting and importing settings (coming soon)</li>
             </ul>
@@ -56,7 +56,7 @@
             LINUX AND MAC SUPPORT COMING (not that) SOON!
           </p>
           <p class="page-title-p">
-            <b>Downloads</b> [ <a href="https://github.com/Mihael3007/PowerPrompt">Windows</a> ]
+            <b>Downloads</b> [ <a href="https://github.com/Mihael3007/PowerPrompt/releases/tag/v1.7">Windows</a> ]
           </p>
       </div>
       <hr class="short">
