--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,17 @@
     <main>
       <div class="cnt-container">
         <h1 class="page-title">Blog</h1>
+          <h2 class="page-title">Java, and PyGame thoughts (05.09.2022)</h2>
+          <p class="page-title-p">
+            Yeah, so I've been learning Java since, like, late August? It's tough. I chose it over Kotlin, which seems easier. I was thinking about making 
+            Minecraft plugins for Spigot, I'll definitely try. School started, and it won't be an easy year, so I should (and will) focus more on science. 
+            Also, about PyGame. I like it, I feel like I have control over I do in it, but it is kinda overwhelming, I think about C# and Unity, which I guess 
+            would be a better choice, not only because Unity is supported on almost all of the platforms, it would be A LOT quicker, faster, and relaxing to 
+            not struggle with PyGame, but with something that I could do more in. And if you haven't heared about PowerPrompt, check it out, it's posted on 
+            the Downloads page, as well as on the Projects one. <s>And don't forget to check out included with PowerPrompt, ToDo list, made by me!!!!!!</s>
+            That's it for today!
+          </p>
+          <hr class="medium">
           <h2 class="page-title">The new website is ready! (27.07.2022)</h2>
           <p class="page-title-p">
             I've been working for 2 hours on it, and I have finally done it! It looks really neat, at least for me. After I finish it, I'm planning to finish
@@ -38,7 +49,6 @@
             something interesting, and quietly copy it :D I would want to post here recent updates as frequently as possible, let's say mayby every 10 days? 
             By the way, have you watched The Paper House: Korea? It's a nice korean version of the original serial. For now, stay tuned for next post!
           </p>
-        <!-- <hr class="medium"> -->
       </div>
       <hr class="short">
       <h6 class="page-title">Copyright Kwadratz 2022. All rights reserved.</h6>
