Is git working??

--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Kwadratz - Blog</title>
-    <meta name="keywords" content="kwadrat projects kwadratz cavestuck" />
+    <meta name="keywords" content="kwadrat projects kwadratz cavestuck powerprompt mihael2017" />
     <meta
       name="description"
-      content="My website, with some stuff in it."
+      content="My website, with some stuff. Check it out!"
     />
     <meta name="author" content="Kwadratz" />
     <link rel="stylesheet" type="text/css" href="style.css" />
