Small changes preparing for an update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2 family=Roboto+Slab&display=swap" rel="stylesheet"/>
-    <script src="script.js"></script>
   </head>
   <body>
     <header>
@@ -26,6 +25,7 @@
         <button class="button-links" onclick="window.location.href = 'projects.html'">Projects</button>
         <button class="button-links" onclick="window.location.href = 'dls.html'">Downloads</button>
         <button class="button-links" onclick="window.location.href = 'contact.html'">Contact</button>
+        <!--<button id="change-theme" class="button-links">☀️</button>-->
       </div>
     </header>
     <main>
@@ -47,4 +47,5 @@
       <h6 class="page-title">Copyright Kwadratz 2022. All rights reserved.</h6>
     </main>
   </body>
+  <script src="script.js"></script>
 </html>
