--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Kwadratz" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
   </head>
   <body>
     <header>
