another small change

--- a/pcspecs.html
+++ b/pcspecs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Kwadratz - PC Specs</title>
-    <meta name="keywords" content="kwadrat projects kwadratz cavestuck" />
+    <meta name="keywords" content="kwadrat projects kwadratz cavestuck powerprompt" />
     <meta
       name="description"
       content="My website, with some stuff in it."
