--- a/dls.html
+++ b/dls.html
@@ -33,7 +33,8 @@
             SzafAppka v1.1 - Download for <u><a href="https://bit.ly/SzafAppka1">Android</a></u><br>
             PowerPrompt 1.6.9 - Download for <u><a href="https://github.com/Mihael3007/PowerPrompt/releases/tag/v1.6">Windows</a></u><br>
             PowerPrompt 1.7.0 - Download for <u><a href="https://github.com/Mihael3007/PowerPrompt/releases/tag/v1.7">Windows</a></u><br>
-            Turtlebrush - Download for <u><a href="https://kwadratprojects.glitch.me/turtlebrush.py">Windows</a></u> <u><a href="https://kwadratprojects.glitch.me/turtlebrush.py">Linux</a></u><br>
+            Turtlebrush - Download for <u><a href="https://kwadratprojects.glitch.me/turtlebrush.py">Windows</a></u> <u><a href="https://kwadratprojects.glitch.me/turtlebrush.py">Linux</a></u>
+            <i> TurtleBrush 2.0 coming (not that) soon, shhh...</i><br>
           </p>
       </div>
       <hr class="short">
