--- a/projects.html
+++ b/projects.html
@@ -45,11 +45,25 @@
               <li>Character counter</li>
               <li>To-do list</li>
               <li>Voice controlling (coming soon)</li>
-              <li>Exporting and importing settings (coming soon)</li>
+              <li>Exporting and importing settings</li>
             </ul>
             <i>Project is made in 99% by Mihael2017, I've contributed to this project a few times, and here is the only - at least for now - 
             public download source. 
             </i>
+            <b>1.7.1 Changelog</b><br>
+            <ul>
+              <li>PowerPrompt and diskpart are now a bit more colorful</li>
+              <li>PowerPrompt doesn't close anymore after pressing the X on versionDialog</li>
+              <li>Removed Settings UI</li>
+              <li>Added PowerPrompt To-Do (by Kwadratz)</li>
+              <li>Added commandlist back (for both diskpart and PowerPrompt)</li>
+              <li>All commands aren't case-sensitive anymore! (diskpart and PowerPrompt)</li>
+              <li>Fixed a small bug in PowerPrompt Settings</li>
+              <li>You can now change which history config gets loaded trough PowerPrompt Settings</li>
+              <li>You can now import/export data from other PowerPrompt Version (useful when updating)</li>
+              <li>Added the "help" command</li>
+              <li>Removed unused modules</li>
+            </ul>
             LINUX AND MAC SUPPORT COMING (not that) SOON!
           </p>
           <p class="page-title-p">
