--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         I call myself a programming beginner, and I know Python, HTML and CSS well. I also sometimes write code in JS. I'm learning Java now, as well as PyGame. Privately, I enjoy taking photos, learning geography, rollerskating, playing Minecraft 
         and of course coding! I have a furious cat named Hubert, he's my second cat. I live in Wroclaw, Poland, and I'm 1 hours ahead Brits, or even 2 hours during summer. If you wish to contact me, do it 
         <a href="contact.html">here</a>. Also, you can check my PC specifications <a href="pcspecs.html">here</a>. I also run a 
-        <a href="https://www.youtube.com/channel/UCSy-GbQIzfUKppQH9k_CDqg">YouTube channel</a> about my projects.<br></p>
+        <a href="https://www.youtube.com/@kwadratz">YouTube channel</a> about my projects and other stuff.<br></p>
       </div>
       <hr>
       <div class="cnt-container">
