New channel link

--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,19 @@
     <main>
       <div class="cnt-container">
         <h1 class="page-title">Blog</h1>
+          <h2 class="page-title">Some new updates about me (02.11.2022)</h2>
+          <p class="page-title-p">
+            Writing this on the last hours of the long, 4-day weekend! 3 work days more to come this week. Remember what I've written in September? I kinda
+            stopped learning, and made less time for programming in October. That is mostly because of school, intense learning due to many tests, 
+            extracurriculars, things like that. I started to learn PySimpleGUI, which is actually great and easy to use! I got some great game ideas, 
+            that I could make in PyGame, but these are plans for next months. I was thinking about a 2d half-sandbox game, would work like a clone of Minecraft,
+            but with my ideas of course. If somebody noticed, the website has been updated to support mobile devices! 
+            Talking about Minecraft, in recent days, I've played more than usual, on my server CitiesBuild, and you can see some parts of it in my newest, at least 
+            for now, video. I was more or less tired of algorithmic thinking and solving problems, I wrote an IT test in my school, and was preparing for it
+            with my friend for way too long :D. There are also other contests from other subjects, I'm going to participate in these too. That's it for today,
+            dziękuję for reading!
+          </p>
+          <hr class="medium">
           <h2 class="page-title">Java, and PyGame thoughts (05.09.2022)</h2>
           <p class="page-title-p">
             Yeah, so I've been learning Java since, like, late August? It's tough. I chose it over Kotlin, which seems easier. I was thinking about making 
