--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <main>
       <div class="cnt-container">
         <h1 class="page-title">Contact</h1>
-          <p class="page-title-p">
+          <p class="page-title-p center-text-mobile">
             If you wish to contact me, here are some ways to send me a message, or ask for something!<br>
             <ul>
               <li><b>Discord > </b>You can contact me privately (Kwadratz#8924)<br>Or, you can join <a href="https://bit.ly/modernfatory">my server</a>, or 
