--- a/dls.html
+++ b/dls.html
@@ -28,7 +28,7 @@
     <main>
       <div class="cnt-container">
         <h1 class="page-title">Downloads</h1>
-          <p class="page-title-p">
+          <p class="page-title-p center-text-mobile">
             SzafAppka v1.0 - Download for <u><a href="https://bit.ly/SzafAppka">Android</a></u><br>
             SzafAppka v1.1 - Download for <u><a href="https://bit.ly/SzafAppka1">Android</a></u><br>
             PowerPrompt 1.6.9 - Download for <u><a href="https://github.com/Mihael3007/PowerPrompt/releases/tag/v1.6">Windows</a></u><br>
