--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="My website, with some stuff in it."
     />
     <meta name="author" content="Kwadratz" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="style.css" />
     
