--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     />
     <meta name="author" content="Kwadratz" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
   </head>
