OG protocol support with favicons!

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,12 @@
     <meta name="author" content="Kwadratz" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="icon/ico" href="media/favicon.ico"/>
     <link rel="stylesheet" href="style.css" />
+    <meta property="og:title" content="Kwadratz - Blog" />
+    <meta property="og:description" content="Famous form of news-delivering praised by English teachers."/>
+    <meta property="og:url" content="https://kwadratz.github.io/" />
+    <meta property="og:image" content="media/kwadratz_nm.png" />
     <script src="script.js"></script>
   </head>
   <body>
