--- a/pcspecs.html
+++ b/pcspecs.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="icon/ico" href="media/favicon.ico"/>
+    <meta property="og:title" content="Kwadratz - PC Specs" />
+    <meta property="og:description" content="Describes the insides of my crappy laptop!"/>
+    <meta property="og:url" content="https://kwadratz.github.io/" />
+    <meta property="og:image" content="media/kwadratz_nm.png" />
     <script src="script.js"></script>
   </head>
   <body>
