--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,11 @@
     <meta name="author" content="Kwadratz" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="icon/ico" href="media/favicon.ico"/>
+    <meta property="og:title" content="Kwadratz - Projects" />
+    <meta property="og:description" content="All things that I made, and they are cool :cold_face:"/>
+    <meta property="og:url" content="https://kwadratz.github.io/" />
+    <meta property="og:image" content="media/kwadratz_nm.png" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
   </head>
