--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="icon/ico" href="media/favicon.ico"/>
+    <meta property="og:title" content="Kwadratz" />
+    <meta property="og:description" content="My website, with some stuff in it."/>
+    <meta property="og:url" content="https://kwadratz.github.io/" />
+    <meta property="og:image" content="media/kwadratz_nm.png" />
     
   </head>
   <body>
