Update logo for dark mode support (not coming soon tho)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <hr class="short">
-      <h6 class="page-title">Copyright Kwadratz 2022. All rights reserved.</h6>
+      <h6 class="page-title">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
     </main>
   </body>
   <script src="script.js"></script>
