--- a/pcspecs.html
+++ b/pcspecs.html
@@ -43,7 +43,7 @@
           </p>
       </div>
       <hr class="short">
-      <h6 class="page-title">Copyright Kwadratz 2022. All rights reserved.</h6>
+      <h6 class="page-title">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
     </main>
   </body>
 </html>
