--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
           </p>
       </div>
       <hr class="short">
-      <h6 class="page-title">Copyright Kwadratz 2022. All rights reserved.</h6>
+      <h6 class="page-title">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
     </main>
   </body>
 </html>
