Dark mode quick fix #1 (if there isn't #2 means this works)

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="All things that I made, and they are cool :cold_face:"/>
     <meta property="og:url" content="https://kwadratz.github.io/" />
     <meta property="og:image" content="media/kwadratz_nm.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
   </head>
   <body>
