--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="icon/ico" href="media/favicon.ico"/>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <meta property="og:title" content="Kwadratz - Blog" />
     <meta property="og:description" content="Famous form of news-delivering praised by English teachers."/>
     <meta property="og:url" content="https://kwadratz.github.io/" />
