--- a/pcspecs.html
+++ b/pcspecs.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Kwadratz" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="shortcut icon" type="icon/ico" href="media/favicon.ico"/>
     <meta property="og:title" content="Kwadratz - PC Specs" />
     <meta property="og:description" content="Describes the insides of my crappy laptop!"/>
