--- a/blog.html
+++ b/blog.html
@@ -66,8 +66,9 @@
             By the way, have you watched The Paper House: Korea? It's a nice korean version of the original serial. For now, stay tuned for next post!
           </p>
       </div>
-      <hr class="short">
-      <h6 class="page-title">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
+      <footer>
+        <h6 class="page-title footer_text">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
+      </footer>
     </main>
   </body>
 </html>
