--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,9 @@
             </ul>
           </p>
       </div>
-      <hr class="short">
-      <h6 class="page-title">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
+      <footer>
+        <h6 class="page-title footer_text">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
+      </footer>
     </main>
   </body>
 </html>
