--- a/dls.html
+++ b/dls.html
@@ -44,8 +44,9 @@
             <i> TurtleBrush 2.0 coming (not that) soon, shhh...</i><br>
           </p>
       </div>
-      <hr class="short">
-      <h6 class="page-title">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
+      <footer>
+        <h6 class="page-title footer_text">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
+      </footer>
     </main>
   </body>
 </html>
