--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         <iframe width="640" height="360" src="https://www.youtube.com/embed/ZcgBx9DA7Rc" title="CitiesBuild: A2 + A5: Podziemna Góra Lotnisko - Żelaniny Północ" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <hr class="short">
-      <h6 class="page-title">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
+      <footer>
+      <h6 class="page-title footer_text">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
+      </footer>
     </main>
   </body>
   <script src="script.js"></script>
