--- a/pcspecs.html
+++ b/pcspecs.html
@@ -42,8 +42,9 @@
             OS: Windows 11 Home (planning to switch onto linux)
           </p>
       </div>
-      <hr class="short">
-      <h6 class="page-title">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
+      <footer>
+        <h6 class="page-title footer_text">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
+      </footer>
     </main>
   </body>
 </html>
