--- a/projects.html
+++ b/projects.html
@@ -76,8 +76,9 @@
             <b>Downloads</b> [ <a href="https://github.com/Mihael3007/PowerPrompt/releases/tag/v1.7">Windows</a> ]
           </p>
       </div>
-      <hr class="short">
-      <h6 class="page-title">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
+      <footer>
+        <h6 class="page-title footer_text">Copyright Kwadratz 2022 - 2023. All rights reserved.</h6>
+      </footer>
     </main>
   </body>
 </html>
