preparation for a change

--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
   <body>
     <header>
       <div class="header-left-side">
-        <img src="media\kwadratz_nm.png" class="header-logo" onclick="window.location.href = 'index.html'">
+        <img src="media\plainSquareBanner.png" class="header-logo" onclick="window.location.href = 'index.html'">
       </div>
       <div class="header-right-side">
         <button class="button-links" onclick="window.location.href = 'blog.html'">Blog</button>
