--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Kwadratz - Home</title>
-    <meta name="keywords" content="kwadrat projects kwadratz cavestuck" />
+    <meta name="keywords" content="kwadratz" />
     <meta
       name="description"
       content="My website, with some stuff in it."
@@ -22,7 +22,7 @@
   <body>
     <header>
       <div class="header-left-side">
-        <img src="media\kwadratz_nm.png" class="header-logo" onclick="window.location.href = 'index.html'">
+        <img src="media\plainSquareBanner.png" class="header-logo" onclick="window.location.href = 'index.html'">
       </div>
       <div class="header-right-side">
         <button class="button-links" onclick="window.location.href = 'blog.html'">Blog</button>
@@ -33,6 +33,11 @@
       </div>
     </header>
     <main>
+      <div class="box-flex-container">
+        <div class="box-flex-element">
+          
+        </div>
+      </div>
       <div class="cnt-container">
         <h1 class="page-title">Welcome!</h1>
         <p class="page-title-p">Howdy, welcome to my website! My name is Wiktor, but I use Kwadratz as my name in the internet (means "square" in Polish, which I speak!). 
